feat: corutine mq handler

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DEBUG_MODE=boolean
 
-REDIS_HOST=string
-REDIS_PORT=int
-REDIS_USER=string
-REDIS_PWD=string
+MQ_HOST=string
+MQ_PORT=int
+MQ_USER=string
+MQ_PWD=string
